--- a/influcid/css/style.css
+++ b/influcid/css/style.css
@@ -236,7 +236,7 @@ sup {font-size:xx-small; vertical-align:super;}
   flex-direction: column;
   align-items: center;
   background-color: #f2f2f3;
-  padding: 25px 0;
+  padding: 25px;
 }
 
 .block-1__text {
@@ -247,14 +247,15 @@ sup {font-size:xx-small; vertical-align:super;}
   display: flex;
   align-items: center;
   font-size: 20px;
+  max-width: 90%;
 }
 
 .block-1__text p::before {
   content: '';
   display: inline-block;
-  margin-right: 20px;
-  width: 20px;
-  height: 20px;
+  margin-right: 5px;
+  width: 15px;
+  height: 15px;
   background: url("../images/q10.png")no-repeat center / contain;
 }
 
@@ -319,12 +320,14 @@ sup {font-size:xx-small; vertical-align:super;}
 .block-2__image b {
   display: block;
   position: relative;
-  top: 92%;
+  top: 90%;
   color: #43781f;
   font-size: 20px;
 }
 
-
+.vertical {
+  flex-direction: column !important;
+}
 
 .block-3 {
   width: 100vw;
@@ -453,6 +456,11 @@ sup {font-size:xx-small; vertical-align:super;}
   box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
 }
 
+
+.block-5 .subcontainer-particle-2 {
+      margin-bottom: 20px;
+}
+
 .block-5 h3 {
   margin: 0 0 50px;
   font-size: 30px;
@@ -469,7 +477,7 @@ sup {font-size:xx-small; vertical-align:super;}
 }
 
 .block-5__container-btext {
-  margin: 50px 0 150px;
+  margin: 50px 0 50px;
   font-size: 20px;
 }
 
@@ -481,6 +489,10 @@ sup {font-size:xx-small; vertical-align:super;}
   -webkit-box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
   -moz-box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
   box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
+}
+
+.container__subcontainer h4 {
+  font-size: 20px;
 }
 
 .block-5 .container__subcontainer p {
@@ -498,7 +510,7 @@ sup {font-size:xx-small; vertical-align:super;}
 }
 
 .block-5  .subcontainer-particle-1 {
-  width: 50%;
+  width: 35%;
 }
 
 .block-5  .subcontainer-particle-2 {
@@ -508,15 +520,15 @@ sup {font-size:xx-small; vertical-align:super;}
 }
 
 .clock-img {
-  width: 60px;
-  height: 60px;
+  width: 70px;
+  height: 70px;
   margin-right: 20px;
   background: url("../images/clock.png") no-repeat center / contain;
 }
 
 .pill-container {
   width: 200px;
-  height: 100%;
+  height: 100px;
   background: url("../images/pill8.png") no-repeat center / contain;
 }
 
@@ -533,6 +545,14 @@ sup {font-size:xx-small; vertical-align:super;}
   background: url("../images/pill12.png") no-repeat center / contain;
 }
 
+.pill-btn::after {
+  content: '';
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+  background: url("../images/action2w.png")no-repeat center / contain !important; 
+}
+
 .subtext {
   color: #43781f;
   margin: 10px 0;
@@ -544,7 +564,7 @@ sup {font-size:xx-small; vertical-align:super;}
 }
 
 .bottom-text p::before {
-  content: '✔️';
+  content: '✔';
   margin-right: 10px;
   /*display: inline-block;*/
 }
@@ -567,10 +587,15 @@ sup {font-size:xx-small; vertical-align:super;}
   color: white;
   display: flex;
   align-items: center;
-  padding: 10px 0px 0px 10px;
+  padding: 10px 0px 0px 50px;
   margin: 50px;
   border: 1px solid white;
   border-radius: 30px;
+  display: none;
+}
+.buy-btn p {
+      margin-right: 25px;
+    margin-bottom: 15px;
 }
 
 .buy-btn::after {
@@ -635,11 +660,30 @@ sup {font-size:xx-small; vertical-align:super;}
   font-family: 'Open Sans Light', sans-serif;
 }
 
+.panel__checklist p::before {
+  content: '✓';
+  margin-right: 10px;
+}
+
+.panel ul {
+  text-align: left;
+  font-size: 20px;
+}
+
+.panel__accent-text {
+  color: green;
+  font-weight: bold;
+  font-size: 27px !important;
+}
 
 .panel p {
   text-align: left;
   line-height: 30px;
-  color: gray;
+  font-size: 20px;
+}
+
+.panel__sub p {
+  font-size: 15px;
 }
 
 .panel b {
@@ -726,6 +770,9 @@ html {
   background: url("../images/disklamer.png")no-repeat center / contain;
 }
 
+.active-nav {
+  color: #43781f !important;
+}
 
 .active-btn {
   background-color: #88c168;
@@ -734,9 +781,18 @@ html {
 }
 
 .active-btn::after {
-  background: url("../images/action1w.png")no-repeat center / contain !important;
+  background: url("../images/action2w.png")no-repeat center / contain !important;
 }
 
+.active-btn2 {
+  background-color: #88c168;
+  color: white;
+  border: 1px solid white !important;
+}
+
+.active-btn2::after {
+  background: url("../images/action1w.png")no-repeat center / contain !important;
+}
 
 .block-5-active {
 
@@ -963,7 +1019,7 @@ html {
   }
   .App-header .block-2__plate p {
     top: 50px;
-    font-size: 10px;
+    font-size: 8px;
   }
   .App-header .header-block-2 {
         margin: 20px 0 70px;
