--- a/influcid/css/style.css
+++ b/influcid/css/style.css
@@ -153,6 +153,7 @@ sup {font-size:xx-small; vertical-align:super;}
   color: white;
 }
 
+
 .navigation .navigation-container .logo {
   color: #43781f;
   font-size: 30px;
@@ -174,7 +175,7 @@ sup {font-size:xx-small; vertical-align:super;}
 
 .App-header p {
   position: absolute;
-  bottom: 10vh;
+  bottom: 0;
   font-size: 50px;
   margin: 0;
   width: 100%;
@@ -192,23 +193,22 @@ sup {font-size:xx-small; vertical-align:super;}
 
 
 .App-header .block-2__plate {
-  height: 100px;
-  width: 100px;
+  height: 130px;
+  width: 130px;
   margin-right: 50px;
   background: url("../images/q1.png") no-repeat center / contain;
 }
 
 .App-header .block-2__plate p {
   position: relative;
-  left: -10px;
-  top: 100px;
+  top: 130px;
   font-size: 13px;
   color: black;
   background-color: transparent;
 }
 
 .App-header .block-2__plate:nth-child(2) {
-  background: url("../images/q2.png") no-repeat center / contain;
+  background: url("../images/q6.png") no-repeat center / contain;
 }
 
 .App-header .block-2__plate:nth-child(3) {
@@ -221,7 +221,7 @@ sup {font-size:xx-small; vertical-align:super;}
 
 .main-img-container {
   min-height: 100vh;
-  margin-top: -12vh;
+  /*margin-top: -12vh;*/
   width: 100%;
   background: url("../images/first img.png") no-repeat center / cover;
 }
@@ -253,9 +253,9 @@ sup {font-size:xx-small; vertical-align:super;}
 .block-1__text p::before {
   content: '';
   display: inline-block;
-  margin-right: 5px;
-  width: 15px;
-  height: 15px;
+  margin-right: 20px;
+  min-width: 15px;
+  min-height: 15px;
   background: url("../images/q10.png")no-repeat center / contain;
 }
 
@@ -433,6 +433,14 @@ sup {font-size:xx-small; vertical-align:super;}
   background: url("../images/inf.png")no-repeat center / contain;
 }
 
+.prod-mobile {
+  display: none;
+  width: 200px;
+  height: 200px;
+  align-self: center;
+  background: url("../images/inf.png")no-repeat center / contain;
+}
+
 .block-4 {
   width: 100vw;
   display: flex;
@@ -462,7 +470,7 @@ sup {font-size:xx-small; vertical-align:super;}
 }
 
 .block-5 h3 {
-  margin: 0 0 50px;
+  margin: 0 0 30px;
   font-size: 30px;
 }
 
@@ -649,7 +657,6 @@ sup {font-size:xx-small; vertical-align:super;}
 .panel {
   max-width: 80%;
   margin: auto;
-  padding: 0 18px;
   margin-top: 10px;
   border-radius: 10px;
   color: #212121;
@@ -678,7 +685,7 @@ sup {font-size:xx-small; vertical-align:super;}
 
 .panel p {
   text-align: left;
-  line-height: 30px;
+  line-height: 20px;
   font-size: 20px;
 }
 
@@ -698,6 +705,10 @@ sup {font-size:xx-small; vertical-align:super;}
 .block-6 {
   width: 100vw;
   margin: auto;
+  padding: 25px 0;
+  -webkit-box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
+  -moz-box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
+  box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
 }
 
 .block-6__container {
@@ -711,7 +722,7 @@ sup {font-size:xx-small; vertical-align:super;}
 
 .block-6__container-img {
   width: 100vw;
-  height: 50vh;
+  height: 65vh;
   background: url("../images/post2.jpg") center / cover;
   position: relative;
 }
@@ -734,6 +745,14 @@ sup {font-size:xx-small; vertical-align:super;}
   font-size: 20px;
 }
 
+
+.block-7 {
+  background-color: #f2f2f3;
+  padding: 25px 0;
+  -webkit-box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
+  -moz-box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
+  box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
+}
 
 .block-7__img {
   height: 300px;
@@ -824,6 +843,80 @@ html {
 
 
 
+/*/////disclamer*/
+
+.disclamer-tra {
+  margin: auto;
+  /*background: url('../images/bg.png');*/
+  padding: 20px 0;
+  width: 90%;
+}
+
+.disclamer-tra ol {
+  margin-bottom: 50px;
+}
+
+.disclamer-tra li {
+  color: grey;
+  font-family: Roboto-Light;
+}
+
+.disclamer-tra p {
+  margin-bottom: 0;
+  color: grey;
+  font-family: 'Roboto-Light';
+}
+
+.disclamer-tra .logos-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
+
+.disclamer-tra__logo {
+  height: 100px;
+  width: 100px;
+  background: url('../images/dhu.png') no-repeat center / contain;
+  text-decoration: none;
+}
+
+.disclamer-tra__logo p {
+  text-align: left;
+  margin: 25px 100px;
+  width: 350px;
+}
+
+.disclamer-tra__alpen {
+  height: 100px;
+  width: 100px;
+  background: url('../images/logo2.png') no-repeat center / contain;
+  text-decoration: none;
+}
+
+.disclamer-tra__alpen p {
+  text-align: right;
+  margin: 25px -255px;
+  width: 250px;
+}
+
+
+
+.disclamer-warning {
+  background-color: #f8f9fa;
+  display: flex;
+}
+
+.disclamer-warning p {
+  font-size: 150px;
+  text-align: center;
+  color: #8b8b8b;
+  margin: 40px 0;
+  font-family: 'Yanone Kaffeesatz';
+}
+/*/////disclamer-end*/
+
+
 
 /*burger menu*/
 
@@ -831,7 +924,7 @@ html {
   display: block;
   position: relative;
   top: 0;
-  left: -25px;
+  left: 10px;
 
   z-index: 1;
 
@@ -995,6 +1088,31 @@ html {
     display: none;
   }
 
+  .prod-mobile {
+    display: block;
+  }
+
+  .block-3__product {
+    display: none;
+  }
+
+  .App-header .header-block-2 {
+    flex-wrap: wrap;
+  }
+
+
+  .where-to-buy__desktop {
+    display: block !important;
+  }
+
+  .logo {
+    font-size: 25px;
+  }
+
+  .panel ul {
+    font-size: 13px;
+  }
+
   .main-img-container {
     min-height: 50vh;
     margin-top: 5vh;
@@ -1013,16 +1131,17 @@ html {
     font-size: 9px;
   }
   .App-header .block-2__plate {
-    height: 50px;
-    width: 50px;
-    margin-right: 20px;
+    margin: 30px;
+    height: 100px;
+    width: 100px;
   }
   .App-header .block-2__plate p {
-    top: 50px;
-    font-size: 8px;
+    top: 105px;
+    font-size: 13px;
   }
   .App-header .header-block-2 {
-        margin: 20px 0 70px;
+    margin: 20px 0 70px;
+    justify-content: center;
   }
   h2 {
     font-size: 20px;
@@ -1040,8 +1159,8 @@ html {
     height: 100px;
   }
   .block-3__plate {
-    width: 50px;
-    height: 50px;
+    width: 120px;
+    height: 120px;
   }
   .block-2__text p {
     font-size: 9px;
@@ -1054,21 +1173,30 @@ html {
   .block-2__image b {
     font-size: 10px;
   }
+
+  .block-3__plate {
+    margin: 30px;
+  }
+
   .block-3__right-block .block-3__plate:nth-child(2) {
-    left: 50px;
+    left: auto;
   }
   .block-3__left-block .block-3__plate:nth-child(2) {
-    left: -50px;
+    left: auto;
   }
   .block-3__right-block .block-3__plate p {
-    top: 20px;
+    top: 85px;
     left: -10px;
-    font-size: 7px;
+    font-size: 15px;
   }
   .block-3__left-block .block-3__plate p {
-    top: 20px;
+    top: 85px;
     left: -10px;
-    font-size: 7px;
+    font-size: 15px;
+  }
+
+  .block-5 .subcontainer-particle-1 {
+    width: 100%;
   }
   .block-5 h3 {
     font-size: 18px;
@@ -1085,12 +1213,16 @@ html {
   }
   .block-5__container-btext {
     font-size: 15px;
-        margin: 20px 20px 50px;
+        margin: 20px 20px 30px;
   }
   .block-6__container-img p {
     font-size: 20px;
   }
+  .block-6__container-img {
+    height: 40vh;
+  }
   .block-6__container-text p {
+    line-height: 20px;
     font-size: 15px;
   }
   .block-7__text ol {
@@ -1121,6 +1253,84 @@ html {
 .navigation-logo div {
     margin: 0;
 }
+
+  .block-2__container {
+    flex-direction: column;
+  }
+
+  .block-2__image {
+    width: 100%;
+    height: 350px;
+    margin-bottom: 50px;
+  }
+
+
+  .block-2__text {
+    margin: auto;
+  }
+
+
+  .block-2__image b {
+    top: 98%;
+    margin: auto;
+  }
+
+  .disclamer-tra ol li, .disclamer-tra p {
+    font-size: 12px;
+  }
+
+  .disclamer-warning p {
+    font-size: 55px;
+  }
+
+  .disclamer-tra {
+    margin: auto;
+    padding: 20px;
+  }
+
+  .disclamer-tra ol {
+    padding-left: 10px;
+  }
+
+  .disclamer-tra p {
+    margin-bottom: 0;
+    color: grey;
+    font-family: 'Roboto-Light';
+  }
+  .disclamer-tra .logos-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 100px;
+  }
+
+  .disclamer-tra__logo {
+    height: 50px;
+    width: 50px;
+    background: url('../images/dhu.png') no-repeat center / contain;
+    text-decoration: none;
+  }
+
+  .disclamer-tra__logo p {
+    text-align: left;
+    margin: 70px 0px;
+    font-size: 10px;
+    width: 150px;
+  }
+
+  .disclamer-tra__alpen {
+    height: 50px;
+    width: 50px;
+    background: url('../images/logo2.png') no-repeat center / contain;
+    text-decoration: none;
+  }
+
+  .disclamer-tra__alpen p {
+    text-align: right;
+    margin: 70px -100px;
+    font-size: 10px;
+    width: 150px;
+  }
 }
 /*@keyframes App-logo-spin {*/
 /*  from {*/
@@ -1130,6 +1340,13 @@ html {
 /*    transform: rotate(360deg);*/
 /*  }*/
 /*}*/
+
+
+
+
+
+
+
 
 
 
@@ -1148,12 +1365,13 @@ html {
     text-decoration: none;
 }
 #menu li:last-child a {
-  background-color: #2894cf;
-    padding: 10px 20px;
-    border-radius: 20px;
-    text-align: center;
-    color: white;
+  border: 1px solid grey;
+  padding: 10px;
+  border-radius: 10px;
+  margin-left: 10px;
 }
+
+
 
 .desctop-navigation a::after {
       content: "|";
@@ -1164,17 +1382,29 @@ html {
     margin: auto;
 }
 .desctop-navigation a:last-child {
+  border: 1px solid grey;
+  padding: 10px;
+  border-radius: 10px;
+  margin-left: 10px;
+}
+
+.desctop-navigation .where-to-buy {
   background-color: #2894cf;
-    padding: 10px 20px;
-    border-radius: 20px;
-    text-align: center;
-    color: white;
+  padding: 10px 20px;
+  border-radius: 20px;
+  text-align: center;
+  color: white;
+}
+
+.desctop-navigation .where-to-buy::after {
+  content: "";
+  margin: auto;
 }
 
 .navigation-logo {
   position: fixed;
   /*height: 100px;*/
-  padding: 10px;
+  padding: 10px 30px;
   width: 100vw;
   top: 0;
   background-color: white;
@@ -1230,3 +1460,12 @@ html {
   }
 }
 
+
+.where-to-buy__desktop {
+  display: none;
+  background-color: #2894cf;
+  padding: 10px 20px;
+  border-radius: 20px;
+  text-align: center;
+  color: white;
+}
