--- a/influcid-EN/css/style.css
+++ b/influcid-EN/css/style.css
@@ -438,7 +438,7 @@ sup {font-size:xx-small; vertical-align:super;}
   width: 300px;
   height: 300px;
   align-self: center;
-  background: url("../images/inf.png")no-repeat center / contain;
+  background: url("../images/INFLU_60RU.png")no-repeat center / contain;
 }
 
 .prod-mobile {
