--- a/bioelektra/css/style.css
+++ b/bioelektra/css/style.css
@@ -120,6 +120,8 @@
     background: url("../images/biolectra_orange_s.png")no-repeat center / contain;
 }
 
+
+
 .block-1_str {
     background: url("../images/Rectangle-sport.jpg") center / contain;
 }
@@ -147,4 +149,49 @@
 .container__img-str {
     height: 400px;
     background: url("../images/woomen 1.png")no-repeat center / contain !important;
+}
+
+
+.container__img-sport {
+    height: 400px;
+    background: url("../images/Rectangle 18.png")no-repeat center / contain !important;
+}
+
+
+
+
+.block-3__container .container  .container__img-main {
+    background: url("../images/Ellipse 5.png")no-repeat center / contain !important;
+}
+.block-3__container .container:nth-child(2)  .container__img-main {
+    background: url("../images/Ellipse 6.png")no-repeat center / contain !important;
+}
+.block-3__container .container:nth-child(3)  .container__img-main {
+    background: url("../images/Ellipse 7.png")no-repeat center / contain !important;
+}
+
+
+
+
+
+.block-3__container .container  .container__img-str {
+    background: url("../images/dlya_maibutnіh_mam-2 1 (3).png")no-repeat center / contain !important;
+}
+.block-3__container .container:nth-child(2)  .container__img-str {
+    background: url("../images/dlya_maibutnіh_mam-2 1 (4).png")no-repeat center / contain !important;
+}
+.block-3__container .container:nth-child(3)  .container__img-str {
+    background: url("../images/dlya_maibutnіh_mam-2 1 (5).png")no-repeat center / contain !important;
+}
+
+
+
+.block-3__container .container  .container__img-sport {
+    background: url("../images/dlya_maibutnіh_mam-2 1.png")no-repeat center / contain !important;
+}
+.block-3__container .container:nth-child(2)  .container__img-sport {
+    background: url("../images/dlya_maibutnіh_mam-2 1 (1).png")no-repeat center / contain !important;
+}
+.block-3__container .container:nth-child(3)  .container__img-sport {
+    background: url("../images/dlya_maibutnіh_mam-2 1 (2).png")no-repeat center / contain !important;
 }
