--- a/isla/css/style.css
+++ b/isla/css/style.css
@@ -68,7 +68,7 @@
     max-width: 150px;
     margin: auto;
 }
-.block-2 p {
+.plate p {
     color: white;
     font-size: 20px;
     font-weight: lighter;
