--- a/influcid-BY/css/style.css
+++ b/influcid-BY/css/style.css
@@ -438,7 +438,7 @@ sup {font-size:xx-small; vertical-align:super;}
   width: 300px;
   height: 300px;
   align-self: center;
-  background: url("../images/INFLU_60RU.png")no-repeat center / contain;
+  background: url("../images/inf.jpg")no-repeat center / contain;
 }
 
 .prod-mobile {
@@ -446,7 +446,7 @@ sup {font-size:xx-small; vertical-align:super;}
   width: 200px;
   height: 200px;
   align-self: center;
-  background: url("../images/inf.png")no-repeat center / contain;
+  background: url("../images/inf.jpg")no-repeat center / contain;
 }
 
 .block-4 {
