--- a/influcid-BY/css/style.css
+++ b/influcid-BY/css/style.css
@@ -231,7 +231,7 @@ sup {font-size:xx-small; vertical-align:super;}
   min-height: 90vh;
   /*margin-top: -12vh;*/
   width: 100%;
-  background: url("../images/first img2.png") no-repeat center / cover;
+  background: url("../images/first img.png") no-repeat center / cover;
 }
 
 .App-link {
@@ -438,7 +438,7 @@ sup {font-size:xx-small; vertical-align:super;}
   width: 300px;
   height: 300px;
   align-self: center;
-  background: url("../images/inf.jpg")no-repeat center / contain;
+  background: url("../images/inf.png")no-repeat center / contain;
 }
 
 .prod-mobile {
@@ -446,7 +446,7 @@ sup {font-size:xx-small; vertical-align:super;}
   width: 200px;
   height: 200px;
   align-self: center;
-  background: url("../images/inf.jpg")no-repeat center / contain;
+  background: url("../images/inf.png")no-repeat center / contain;
 }
 
 .block-4 {
@@ -488,6 +488,7 @@ sup {font-size:xx-small; vertical-align:super;}
 
 .block-5__container {
   display: flex;
+  flex-wrap: wrap;
   width: 90%;
   justify-content: space-evenly;
 }
@@ -711,7 +712,7 @@ sup {font-size:xx-small; vertical-align:super;}
 }
 
 .product-en {
-	background: url("../images/INFLU_60.png") no-repeat center/contain;
+	background: url("../images/inf.png") no-repeat center/contain;
 }
 
 .block-6 {
@@ -921,7 +922,7 @@ html {
 }
 
 .disclamer-warning p {
-  font-size: 150px;
+  font-size: 75px;
   text-align: center;
   color: #8b8b8b;
   margin: 40px 0;
@@ -1303,7 +1304,7 @@ html {
   }
 
   .disclamer-warning p {
-    font-size: 55px;
+    font-size: 40px;
   }
 
   .disclamer-tra {
@@ -1491,6 +1492,19 @@ html {
   border-radius: 20px;
   text-align: center;
   color: white;
+}
+
+.where-to-buy__bottom {
+  background-color: #2894cf;
+  padding: 10px 20px;
+  border-radius: 20px;
+  text-align: center;
+  color: white;
+}
+
+
+.block-5 .container__subcontainer {
+  margin: 10px;
 }
 
 /*#cookies-policy {*/
