--- a/influcid-RU/css/style.css
+++ b/influcid-RU/css/style.css
@@ -94,7 +94,11 @@ body {
   margin: 20px;
   padding: 5px;
   border-radius: 20px;
-  background: url("../images/icon_asna_400x200px.jpg") no-repeat center / contain;
+  background: url("../images/icon_asna_400x200px.jpg") no-repeat;
+  background-position: center !important;
+  background-size: 80% !important;
+    background-color: white !important;
+    box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
 }
 
 .apt-container a:nth-child(2) {
@@ -255,7 +259,7 @@ sup {font-size:xx-small; vertical-align:super;}
   min-height: 90vh;
   /*margin-top: -12vh;*/
   width: 100%;
-  background: url("../images/first img.png") no-repeat center / cover;
+  background: url("../images/first img.jpg") no-repeat center / cover;
 }
 
 .App-link {
