--- a/influcid-KZ/css/style.css
+++ b/influcid-KZ/css/style.css
@@ -906,10 +906,12 @@ html {
 .disclamer-warning {
   background-color: #f8f9fa;
   display: flex;
+  justify-content: center;
 }
 
 .disclamer-warning p {
-  font-size: 150px;
+  font-size: 24px;
+  line-height: 40px;
   text-align: center;
   color: #8b8b8b;
   margin: 40px 0;
@@ -1291,7 +1293,7 @@ html {
   }
 
   .disclamer-warning p {
-    font-size: 55px;
+    font-size: 18px;
   }
 
   .disclamer-tra {
