--- a/influcid-BY/css/style.css
+++ b/influcid-BY/css/style.css
@@ -449,6 +449,8 @@ sup {font-size:xx-small; vertical-align:super;}
   background: url("../images/inf.png")no-repeat center / contain;
 }
 
+
+
 .block-4 {
   width: 100vw;
   display: flex;
@@ -769,10 +771,13 @@ sup {font-size:xx-small; vertical-align:super;}
 }
 
 .block-7__img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 300px;
   width: 80%;
   margin: auto;
-  background: url("../images/map.png") no-repeat center / cover;
+  background: url("../images/map.jpg") no-repeat center / cover;
 }
 
 .block-7__text {
@@ -1497,6 +1502,7 @@ html {
 .where-to-buy__bottom {
   background-color: #2894cf;
   padding: 10px 20px;
+  font-size: 30px;
   border-radius: 20px;
   text-align: center;
   color: white;
