--- a/influcid-AZ/css/style.css
+++ b/influcid-AZ/css/style.css
@@ -759,7 +759,7 @@ sup {font-size:xx-small; vertical-align:super;}
   height: 300px;
   width: 80%;
   margin: auto;
-  background: url("../images/map.png") no-repeat center / cover;
+  background: url("../images/map.jpg") no-repeat center / cover;
 }
 
 .block-7__text {
