--- a/influcid-BY/css/style.css
+++ b/influcid-BY/css/style.css
@@ -1506,6 +1506,7 @@ html {
   border-radius: 20px;
   text-align: center;
   color: white;
+  box-shadow: -1px 4px 5px 0px rgba(107, 107, 107,1);
 }
 
 
