--- a/influcid-RS/css/style.css
+++ b/influcid-RS/css/style.css
@@ -1491,6 +1491,7 @@ html {
 /*}*/
 
 .alert-license {
+  opacity: 0;
   position: fixed;
   bottom: 0;
   left: 0;
@@ -1564,6 +1565,11 @@ html {
 
 .hide {
   display: none;
+}
+
+
+.show {
+  display: flex !important;
 }
 
 @media screen and (max-width: 680px) {
