--- a/Alpikol-HR/css/style.css
+++ b/Alpikol-HR/css/style.css
@@ -35,6 +35,21 @@
     background: url(../images/source5.png) no-repeat 50%/contain;
 }
 
+
+.source-6 {   
+    display: block;
+    height: 10vh;
+    width: 30%;
+    background: url(../images/source6.jpg) no-repeat 50%/contain;
+}
+
+.source-7 {   
+    display: block;
+    height: 10vh;
+    width: 30%;
+    background: url(../images/source7.jpg) no-repeat 50%/contain;
+}
+
 .where-to-buy__desktop {
     display: none;
     background-color: #7c288a;
