--- a/AlphaPharmaceutical/css/style.css
+++ b/AlphaPharmaceutical/css/style.css
@@ -98,7 +98,7 @@ body {
   /*text-align: center;*/
   /*max-width: 1200px;*/
   -webkit-font-smoothing: antialiased;
-  margin: 0;
+  margin: auto;
 }
 
 
@@ -316,6 +316,7 @@ sup {
   text-align: center;
   border: 1px solid rgba(60, 60, 60, 0.4);
   margin: 10px;
+  cursor: pointer;
 }
 
 
@@ -587,6 +588,8 @@ form button {
   font-family: MFLgtregular;
   padding: 10px 41px;
   margin-top: 20px;
+   border:none;
+     outline: none;
 }
 
 
@@ -626,11 +629,10 @@ form button {
 }
 
 .footer-block4 {
-  width: 25vw;
-  border-right: 1px solid white;
+  width: 20vw;
   color: white;
   font-family: MFLgtregular;
-  padding: 0 20px;
+  padding-left: 20px;
 
   font-size: 16px;
   line-height: 20px;
