--- a/AlphaPharmaceutical/css/style.css
+++ b/AlphaPharmaceutical/css/style.css
@@ -301,6 +301,7 @@ sup {
   font-size: 160px;
   line-height: 160px;
   font-family: MFregular;
+  opacity: 0.6;
 }
 
 
@@ -411,6 +412,7 @@ sup {
   font-size: 160px;
   line-height: 160px;
   font-family: MFregular;
+  opacity: 0.6;
 }
 
 
@@ -551,6 +553,7 @@ sup {
   font-size: 160px;
   line-height: 160px;
   font-family: MFregular;
+  opacity: 0.6;
 }
 
 form {
