--- a/AlphaPharmaceutical/css/style.css
+++ b/AlphaPharmaceutical/css/style.css
@@ -302,6 +302,7 @@ sup {
   line-height: 160px;
   font-family: MFregular;
   opacity: 0.6;
+  text-transform: uppercase;
 }
 
 
@@ -413,6 +414,7 @@ sup {
   line-height: 160px;
   font-family: MFregular;
   opacity: 0.6;
+  text-transform: uppercase;
 }
 
 
@@ -554,6 +556,7 @@ sup {
   line-height: 160px;
   font-family: MFregular;
   opacity: 0.6;
+  text-transform: uppercase;
 }
 
 form {
