--- a/influcid-MN/css/style.css
+++ b/influcid-MN/css/style.css
@@ -768,10 +768,13 @@ sup {font-size:xx-small; vertical-align:super;}
 }
 
 .block-7__img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 300px;
   width: 80%;
   margin: auto;
-  background: url("../images/map.png") no-repeat center / cover;
+  background: url("../images/map.jpg") no-repeat center / cover;
 }
 
 .block-7__text {
