--- a/Tansilotren/css/style.css
+++ b/Tansilotren/css/style.css
@@ -185,6 +185,7 @@ div {
   display: flex;
   margin-top: 50px;
   padding-bottom: 150px;
+  overflow: hidden;
 }
 
 .header-title {
@@ -691,7 +692,7 @@ h2 b {
 .disclamer-tra__logo p {
   text-align: left;
   margin: 25px 100px;
-  width: 350px;
+  /*width: 350px;*/
 }
 
 .disclamer-tra__alpen {
