--- a/Tansilotren/css/style.css
+++ b/Tansilotren/css/style.css
@@ -80,6 +80,9 @@ div {
   height: 50px;
   top: 0;
   z-index: 1;
+    -webkit-box-shadow: -1px 2px 5px 0px rgba(150,150,150,1);
+    -moz-box-shadow: -1px 2px 5px 0px rgba(150,150,150,1);
+    box-shadow: -1px 2px 5px 0px rgba(150,150,150,1);
 }
 
 .navigation-container {
@@ -147,7 +150,7 @@ div {
   margin-right: 20px;
   content: '';
   display: block;
-  background: url('../images/icon_02.png') no-repeat center / contain;
+  background: url('../images/icon_number_01.svg') no-repeat center / contain;
   width: 30px;
   height: 30px;
 }
@@ -164,13 +167,13 @@ div {
   margin-left: 90px;
 }
 .header-main-center p:nth-child(2)::before {
-  background: url('../images/icon_03.png') no-repeat center / contain;
+  background: url('../images/icon_number_02.svg') no-repeat center / contain;
 }
 .header-main-center p:nth-child(3)::before {
-  background: url('../images/icon_04 (1).png') no-repeat center / contain;
+  background: url('../images/icon_number_03.svg') no-repeat center / contain;
 }
 .header-main-center p:nth-child(4)::before {
-  background: url('../images/icon_01 (1).png') no-repeat center / contain;
+  background: url('../images/icon_number_04.svg') no-repeat center / contain;
 }
 
 .navigation-menu {
@@ -215,7 +218,7 @@ div {
 .header-main-img {
   width: 457px;
   height: 391px;
-  background: url('../images/throat_tiny_510x442 1.svg') no-repeat center / contain;
+  background: url('../images/div_04.png') no-repeat center / contain;
 }
 
 .header-main-img-mobile {
@@ -261,13 +264,42 @@ div {
     contain;
 }
 
+.counter {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  width: 110px;
+  height: 30px;
+  bottom: 5px;
+  right: 0px;
+}
+
+.left-arrow {
+  background: url("../images/button_left.svg") no-repeat center / contain;
+  width: 30px;
+  height: 30px;
+}
+
+.right-arrow {
+  background: url("../images/button_right.svg") no-repeat center / contain;
+  width: 30px;
+  height: 30px;
+}
+
+.counter-num p {
+  font-size: 16px;
+  line-height: 16px;
+  color: #A00067;
+  padding: 0 5px;
+}
+
 .block-interactive {
   margin: auto;
 }
 
 h1 {
   text-align: center;
-  margin: 100px 0;
+  margin-bottom: 100px;
   color: #a00067;
   font-size: 25px;
   line-height: 30px;
@@ -289,7 +321,8 @@ h2 b {
 }
 
 .block-interactive-inner {
-  border: 1px solid #636363;
+  position: relative;
+  border: 1px solid #d0d0d0;
   padding: 20px;
   width: 60vw;
   min-height: 400px;
@@ -303,12 +336,13 @@ h2 b {
   flex-direction: column;
   justify-content: center;
   width: 25%;
-  border-right: 1px solid #636363;
+  border-right: 1px solid #d0d0d0;
   font-family: 'HNB';
+  cursor: pointer;
 }
 
 .block-4__buttons div {
-  color: #636363;
+  color: #a1a1a1;
   margin-bottom: 15px;
   font-size: 16px;
   line-height: 16px;
@@ -564,7 +598,7 @@ h2 b {
 
 .block-5__plate {
   display: flex;
-  height: 600px;
+  height: 465px;
 }
 .block-5__img {
   width: 50%;
@@ -598,6 +632,10 @@ h2 b {
   font-family: 'HNB';
 }
 
+.block-5__un_plate {
+  margin-bottom: 130px;
+}
+
 .block-5__text p {
   font-size: 16px;
   line-height: 20px;
@@ -613,7 +651,7 @@ h2 b {
 .block-5__popup {
   width: 150px;
   position: relative;
-  top: -120px;
+  top: -45px;
 }
 
 .block-5__plate:nth-child(4) .block-5__img {
@@ -801,8 +839,8 @@ h2 b {
 }
 .popup__message p {
   color: #636363;
-  font-size: 18px;
-  line-height: 19px;
+  font-size: 16px;
+  line-height: 17px;
   margin: 15px 0;
 }
   .popup__close-btn {
@@ -982,8 +1020,8 @@ h2 b {
   }
 
   .test-img-mobile {
-    width: 300px;
-    height: 300px;
+    width: 100%;
+    height: 340px;
     background: url(../images/div_02.png) no-repeat center / contain !important;
   }
 
