--- a/Tansilotren/css/style.css
+++ b/Tansilotren/css/style.css
@@ -1310,6 +1310,9 @@ h2 b {
   #menuToggle {
     left: 215px;
   }
+  .non-usual {
+    margin-bottom: 110px;
+  }
 }
 
 @media screen and (max-width: 450px) {
