--- a/Tansilotren/css/style.css
+++ b/Tansilotren/css/style.css
@@ -119,6 +119,16 @@ div {
   border-radius: 10px;
 }
 
+.where-to-buy-mob {
+  display: none;
+}
+
+.lang {
+  border: 1px solid #636363;
+  padding: 5px;
+  border-radius: 5px;
+}
+
 .navigation-menu a {
   margin-right: 20px;
   text-transform: uppercase;
@@ -1063,7 +1073,7 @@ h2 b {
     display: none;
   }
   .logo-container {
-    margin-right: 135px;
+    margin-right: 30px;
   }
 
   .block-5__inner {
@@ -1316,6 +1326,18 @@ h2 b {
 }
 
 @media screen and (max-width: 450px) {
+
+  .where-to-buy-mob {
+    display: block;
+    background-color: #a00067;
+    color: white !important;
+    font-size: 10px !important;
+    line-height: 10px !important;
+    font-weight: bold;
+    padding: 10px 20px;
+    border-radius: 10px;
+  }
+
   .test-img-mobile {
     /*width: 100%;*/
     height: 415px;
