--- a/influcid-AZ/css/style.css
+++ b/influcid-AZ/css/style.css
@@ -909,11 +909,11 @@ html {
 }
 
 .disclamer-warning p {
-  font-size: 150px;
+  font-size: 120px;
   text-align: center;
   color: #8b8b8b;
   margin: 40px 0;
-  font-family: 'Yanone Kaffeesatz';
+  font-family: 'Akrobat';
 }
 /*/////disclamer-end*/
 
