--- a/Tansilotren/css/style.css
+++ b/Tansilotren/css/style.css
@@ -154,6 +154,25 @@ div {
   align-items: center;
 }
 
+.instruction {
+  position: fixed;
+  top: 80px;
+  left: 20px;
+  width: 80px;
+  height: 80px;
+  z-index: 15;
+  background: url('../images/instruction.svg') no-repeat center / contain;
+}
+
+.instruction p {
+  position: relative;
+  left: -4px;
+  top: 75px;
+  font-size: 13px;
+  color: black;
+  background-color: transparent;
+}
+
 .header-main-center {
   margin-top: 100px;
   font-family: 'HNL', sans-serif;
@@ -274,6 +293,22 @@ div {
   background: url('../images/icon_plus_01_160x187px.png') no-repeat center /
     contain;
 }
+
+/*.block-2__plate-a {*/
+/*  height: 130px;*/
+/*  width: 130px;*/
+/*  margin-right: 50px;*/
+/*}*/
+
+/*.block-2__plate-a p {*/
+/*  position: relative;*/
+/*  top: 130px;*/
+/*  font-size: 13px;*/
+/*  text-transform: uppercase;*/
+/*  text-align: center;*/
+/*  color: #636363;*/
+/*  background-color: transparent;*/
+/*}*/
 
 .block-2__plate p {
   position: relative;
@@ -1077,6 +1112,16 @@ h2 b {
 @media screen and (max-width: 1024px) {
   .navigation-menu {
     display: none;
+  }
+
+  .instruction {
+    height: 40px;
+    width: 40px;
+  }
+  .instruction p {
+    left: -10px;
+    top: 35px;
+    font-size: 9px;
   }
 
   .header-main-product-img {
