--- a/KlimaktoplanV2/css/style.css
+++ b/KlimaktoplanV2/css/style.css
@@ -446,6 +446,7 @@ p {
     font-size: 48px;
     line-height: 38px;
     text-align: center;
+    margin-top: 70px;
 }
 .second-container__plant {
   width: 400px;
@@ -747,6 +748,7 @@ p {
 .fifth-h3 {
   color: #a813a0;
   font-size: 22px;
+  margin-top: 100px;
 }
 .fifth-container {
   display: flex;
