--- a/Tansilotren/css/style.css
+++ b/Tansilotren/css/style.css
@@ -178,7 +178,7 @@ div {
 }
 
 .header-main-center {
-  margin-top: 100px;
+  margin-top: 0;
   font-family: 'HNL', sans-serif;
 }
 
@@ -290,7 +290,7 @@ div {
 
 .header-block-2 {
   display: flex;
-  margin: -60px 0 100px;
+  margin: -60px 0 150px;
   justify-content: center;
 }
 
