--- a/influcid/css/style.css
+++ b/influcid/css/style.css
@@ -251,7 +251,7 @@ sup {
   min-height: 90vh;
   /*margin-top: -12vh;*/
   width: 100%;
-  background: url('../images/first img.png') no-repeat center / cover;
+  background: url('../images/first img.jpg') no-repeat center / cover;
 }
 
 .App-link {
