--- a/Tansilotren-KZ/css/style.css
+++ b/Tansilotren-KZ/css/style.css
@@ -421,6 +421,16 @@ h2 b {
   align-items: center;
 }
 
+.block-7__img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+  width: 80%;
+  margin: auto;
+  background: url("../images/map.jpg") no-repeat center / cover;
+}
+
 
 
 .block-4__buttons {
